--- a/tags.html
+++ b/tags.html
@@ -5,9 +5,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+    <div>
+<header>
     <h1>Important HTML tags</h1>
-
+</header>
     <a href="https://www.flickr.com/photos/jdhancock/3814523970">
       <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></a>
 
@@ -23,8 +29,11 @@
       The tables below don't include all HTML tags, but they do list many of
       the most important ones.
     </p>
+  </div>
+  <div>
+    <header>
     <h2>Block Elements</h2>
-
+</header>
         <table>
           <tr>
             <th>Tag</th>
@@ -32,38 +41,41 @@
             <th>Purpose</th>
           </tr>
           <tr>
-        <td><code>h1</code>&ndash;<code>h6</code></td>
+        <td><li><code>h1</code></li>&ndash;<code>h6</code></td>
         <td>headings</td>
         <td>include a heading (levels 1&ndash;6)</td>
       </tr>
       <tr>
-       <td><code>p</code></td>
+       <td><code><li>p</li></code></td>
        <td>paragraph</td>
        <td>include a paragraph of text</td>
      </tr>
      <tr>
-       <td><code>table</code></td>
+       <td><code><li>table</li></code></td>
        <td>table</td>
        <td>include a table</td>
      </tr>
      <tr>
-       <td><code>tr</code></td>
+       <td><code><li>tr</li></code></td>
        <td>table row</td>
        <td>include a row of data</td>
      </tr>
      <tr>
-       <td><code>th</code></td>
+       <td><code><li>th</li></code></td>
        <td>table header</td>
        <td>make a table header</td>
      </tr>
      <tr>
-       <td><code>td</code></td>
+       <td><code><li>td</li></code></td>
        <td>table data</td>
        <td>include a table data cell</td>
      </tr>
         </table>
+      </div>
+      <div>
+        <header>
         <h2>Inline Elements</h2>
-
+</header>
    <table>
      <tr>
        <th>Tag</th>
@@ -73,12 +85,47 @@
        <th>Result</th>
      </tr>
      <tr>
-       <td><code>em</code></td>
+
+       <td><code><li>em</li></code></td>
        <td>emphasized</td>
        <td>make emphasized text</td>
        <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
        <td><em>technical sophistication</em></td>
+
      </tr>
+     <tr>
+       <td><code><li>strong</li></code></td>
+       <td>strong</td>
+       <td>make strong text</td>
+       <td>
+         <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
+       </td>
+       <td><strong>at least a billion people<strong></td>
+     </tr>
+     <tr>
+       <td><code><li>a</li></code></td>
+       <td>anchor</td>
+       <td>make hyperlink</td>
+       <td>
+         <code>
+           &lt;a href="http://learnenough.com/"&gt;Learn Enough&lt;/a&gt;
+         </code>
+       </td>
+       <td><a href="http://learnenough.com/">Learn Enough</a></td>
+     </tr>
+     <tr>
+       <td><code><li>img</li></code></td>
+       <td>image</td>
+       <td>include an image</td>
+       <td>
+         <code>
+           &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
+         </code>
+       </td>
+       <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+     </tr>
+   </ol>
    </table>
+ </div>
   </body>
 </html>
