--- a/tags.html
+++ b/tags.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
-    </div>
+    <div style="text-align: right;">
+    <a href="index.html">Home</a>
+    <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+    <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+  </div>
     <div>
 <header>
     <h1>Important HTML tags</h1>
@@ -125,6 +125,41 @@
        <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
      </tr>
    </ol>
+   </table>
+   <header>
+     <h1> Document Tags </h2>
+   </header>
+   <table>
+     <tr>
+      <th>Tag</th>
+      <th>Name</th>
+      <th>Purpose</th>
+     </tr>
+     <tr>
+       <td><code>html</code></td>
+       <td>Hyper Text Markup Language</td>
+       <td>Identifies the language of the HTML document</td>
+     </tr>
+     <tr>
+       <td><code>head</code></td>
+       <td>head</td>
+       <td>Includes a title for the document</td>
+     </tr>
+     <tr>
+       <td><code>body</code></td>
+       <td>Body of the HTML file</td>
+       <td>Specifies the body of the HTML document</td>
+     </tr>
+     <tr>
+       <td><code>Title</code></td>
+       <td>Title of the document</td>
+       <td>Specifies the title of the document</td>
+     </tr>
+     <tr>
+       <td><code>meta</code></td>
+       <td>Metadata</td>
+       <td>Displays metadata of the HTML document</td>
+     </tr>
    </table>
  </div>
   </body>
